--- a/apps/fusion/project/ws/admin/src/lib/modules/tenant-admin/routes/users/create-userV2/create-userV2.component.html
+++ b/apps/fusion/project/ws/admin/src/lib/modules/tenant-admin/routes/users/create-userV2/create-userV2.component.html
@@ -31,26 +31,22 @@
           <mat-label>Email</mat-label>
           <input type="email" matInput placeholder="Email" formControlName="email">
         </mat-form-field>
-        <mat-form-field appearance="outline" class="w-full margin-top-xs">
-          <mat-select formControlName="department" i18n-placeholder placeholder="--Select Department Name--">
+        <!-- <mat-form-field appearance="outline" class="w-full margin-top-xs">
+          <mat-select formControlName="department" i18n-placeholder placeholder="--Select Department Name xxx--">
             <mat-option [value]="dept.department_name" *ngFor="let dept of departments">{{dept.department_name}}
             </mat-option>
           </mat-select>
-        </mat-form-field>
+        </mat-form-field> -->
         <div class="border"></div>
-    
+
         <div class="mt-4 flex justify-end">
           <!-- <div class="center flex items-center"> -->
           <!-- <div *ngIf="uploadSaveData" class="pr-4 flex items-center justify-center">
                 <mat-spinner [diameter]="30"></mat-spinner>
               </div> -->
-          <button mat-raised-button
-            color="primary"
-            type="submit" 
-            i18n 
-            [disabled]="uploadSaveData || !createUserForm?.valid"
-            (click)="onSubmit(createUserForm)">
-    
+          <button mat-raised-button color="primary" type="submit" i18n
+            [disabled]="uploadSaveData || !createUserForm?.valid" (click)="onSubmit(createUserForm)">
+
             <ng-container i18n>Create User</ng-container>
           </button>
           <!-- <button type="reset" (click)="onReset()" class="pl-4 mat-button">Cancel</button> -->
@@ -60,20 +56,7 @@
   </mat-card>
 </div>
 
- 
-  <input
-    type="hidden"
-    i18-value
-    i18-aria-value
-    aria-value="Signup successful"
-    value="User created successfully!"
-    #toastSuccess
-  />
-  <input
-    type="hidden"
-    i18-value
-    i18-aria-value
-    aria-value="unable to signup"
-    value="Error Signing up!"
-    #toastError
-  />
+
+<input type="hidden" i18-value i18-aria-value aria-value="Signup successful" value="User created successfully!"
+  #toastSuccess />
+<input type="hidden" i18-value i18-aria-value aria-value="unable to signup" value="Error Signing up!" #toastError />
