Addition of Publication Date & Display in overview, Create User Enable

--- a/apps/fusion/project/ws/admin/src/lib/modules/tenant-admin/routes/users/create-userV2/create-userV2.component.html
+++ b/apps/fusion/project/ws/admin/src/lib/modules/tenant-admin/routes/users/create-userV2/create-userV2.component.html
@@ -32,7 +32,7 @@
           <input type="email" matInput placeholder="Email" formControlName="email">
         </mat-form-field>
         <!-- <mat-form-field appearance="outline" class="w-full margin-top-xs">
-          <mat-select formControlName="department" i18n-placeholder placeholder="--Select Department Name xxx--">
+          <mat-select formControlName="department" i18n-placeholder placeholder="--Select Department Name--">
             <mat-option [value]="dept.department_name" *ngFor="let dept of departments">{{dept.department_name}}
             </mat-option>
           </mat-select>
