ADLI Changes of nomenclature, banner, favicon, logo

--- a/apps/fusion/project/ws/app/src/lib/routes/infy/routes/knowledge-hub/components/project-snapshot/project-snapshot.component.html
+++ b/apps/fusion/project/ws/app/src/lib/routes/infy/routes/knowledge-hub/components/project-snapshot/project-snapshot.component.html
@@ -77,7 +77,7 @@
       >: {{ projectDetails.mstBusinessContext }}
     </p> -->
     <p *ngIf="!islargeScreen" style="padding: 5px 0px 5px 0px;">
-      <span i18n="view: Khub Project Elaborated details">If you are on iGOT Network, Explore more about this project
+      <span i18n="view: Khub Project Elaborated details">If you are on ADLI Network, Explore more about this project
         <a href="{{ url }}" target="_blank" style="color:cadetblue;">Here</a></span>
     </p>
     <div class="margin-top-s margin-top-xs flex flex-wrapped"
