--- a/apps/fusion/project/ws/app/src/lib/routes/app-toc/components/app-toc-banner/app-toc-banner.component.html
+++ b/apps/fusion/project/ws/app/src/lib/routes/app-toc/components/app-toc-banner/app-toc-banner.component.html
@@ -20,7 +20,7 @@
         <div class="header-title flex-col sm:flex-row">
           <div *ngIf="content?.appIcon" class="apIcon">
             <img [src]="content?.creatorLogo" [id]="'source_' + content.identifier" class="source-icon"
-              [wsUtilsDefaultThumbnail]="defaultSLogo" [alt]="content.sourceName || iGOT" />
+              [wsUtilsDefaultThumbnail]="defaultSLogo" [alt]="content.sourceName || ADLI" />
           </div>
           <div class="sm:ml-5 flex flex-auto">
             <h1 class="mat-display-2 margin-remove-bottom padding-bottom-xs hidden sm:block" [title]="content?.name">
