--- a/apps/fusion/project/ws/author/src/lib/routing/modules/home/components/home/home.component.html
+++ b/apps/fusion/project/ws/author/src/lib/routing/modules/home/components/home/home.component.html
@@ -68,7 +68,7 @@
                   i18n>
                   <img class="ws-mat-default-text img-class" src="/assets/images/authoring/draft.svg" id="draft"
                     alt="draft" title="draft" />
-                  <span class="font-white margin-left-xs">Draft</span>
+                  <span class="font-white margin-left-xs">Submission</span>
                 </a>
               </mat-list-item>
               <mat-divider fxFlex="1 0" class="new-mat-divider"></mat-divider>
